--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+input {
+  border: 2px solid #c39353;
+  padding: 14px 0 14px 20px;
+  border-radius: 10px;
+  background-color: #152c5e;
+  color: #b6c8ef;
+  &::placeholder {
+    color: #b6c8ef;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
   }
 }
